[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MenuTitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/MenuPrimaryButton.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 11

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseBackground" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.121569, 0.160784, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -500.0
margin_top = -9.0
margin_right = 500.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.517647, 0.470588, 1 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameButton" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.437188
anchor_top = 0.677679
anchor_right = 0.564739
anchor_bottom = 0.722321
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 50 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Control/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
